tema6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imagina-mi-servicio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "tema6-ingress.imagina.k8s.io"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: mi-servicio
              port:
                number: 80
